# readwise-api

./: .gitignore  .pre-commit-config.yaml  Changelog.md  LICENSE  README.md  pyproject.toml
.github/workflows/: linter.yml  osv-scanner-scheduled.yml  pre-commit-autoupdate.yml
docs/: extend.md  parity-matrix.md
readwise/: __init__.py  __main__.py  api.py  cli.py  model.py  version.py
tests/: __init__.py  test_save_document.py
