[project]
name = "readwise-api"
version = "0.3.0"
description = "An unofficial Python client for the Readwise Reader API."
authors = [{ name = "Florian Schäfer", email = "florian.joh.schaefer@gmail.com" }]
requires-python = "~=3.11"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "ruff>=0.9.4",
    "typer>=0.15.1",
]

[project.scripts]
readwise = "readwise.__main__:app"

[dependency-groups]
dev = [
    "mypy>=1.3.0,<2",
    "ruff>=0.0.270",
    "types-requests>=2.31.0.1,<3",
]

[tool.hatch.build.targets.sdist]
include = ["readwise"]

[tool.hatch.build.targets.wheel]
include = ["readwise"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore = [
    "D100", "D104"  # Do no require docstring for public modules/packages
]
select = [
    "D",  # pydocstyle
    "E",  # pycodestyle (Error)
    "F",  # Pyflakes
    "I",  # isort
    "N",  # pep8-naming
    "W"  # pycodestyle (Warning)
]
pydocstyle.convention = "google"
line-length = 119
