[project]
name = "readwise-api"
version = "0.5.0"
description = "An unofficial Python client for the Readwise Reader API."
authors = [
    { name = "Florian Schäfer", email = "florian.joh.schaefer@gmail.com" },
    { name = "Peter Reuterås", email = "peter@reuteras.net" },
]
requires-python = ">=3.11, <4"
readme = "README.md"
license = "MIT"
dependencies = [
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "ruff>=0.9.4",
    "typer>=0.15.1",
]

[project.scripts]
readwise = "readwise.__main__:app"

[dependency-groups]
dev = [
    "mypy>=1.3.0,<2",
    "pylint>=3.3.4",
    "pytest>=7.0.0",
    "ruff>=0.0.270",
    "types-requests>=2.31.0.1,<3",
]

[tool.hatch.build.targets.sdist]
include = ["readwise"]

[tool.hatch.build.targets.wheel]
include = ["readwise"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
lint.select = [
    "PL",   # Pylint
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # Ruff-specific
]
lint.ignore = [
    "E501",  # line too long, handled by black
]
fix = true
line-length = 119

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.pydocstyle]
convention="google"
